Increased size of #delete-account button in order to fix mobile overflow

--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -42,6 +42,8 @@ header > * {
     position: absolute;
     right: 5px;
     font-size: 28px;
+    width: 40px;
+    height: 40px;
    
 }
 
